--- a/A2HS/style.css
+++ b/A2HS/style.css
@@ -1,6 +1,5 @@
 html {
   height: 100%;
-  background: black;
 }
 
 body {
@@ -17,6 +16,10 @@ img {
   position: absolute;
   top: 1px;
   left: 1px;
+}
+
+.button{
+  background:#0F0;
 }
 
 @media (orientation: landscape) {
